# crew-ai

business_analyzer/: README.md  blueprint.drawio  pyproject.toml
business_analyzer/src/business_analyzer/: crew.py  investment_recommendation.md  investment_recommendation_APPLES.md  main.py
business_analyzer/src/business_analyzer/config/: agents.yaml  tasks.yaml
business_analyzer/src/business_analyzer/tools/: custom_tool.py
column_assistant/: README.md  pyproject.toml
column_assistant/src/column_assistant/: crew.py  main.py
consulting_assistant/: README.md  pyproject.toml
consulting_assistant/src/consulting_assistant/: crew.py  main.py
news_reporter/: README.md  pyproject.toml
news_reporter/src/news_reporter/: crew.py  final_report.md  global_report.md  korean_report.md  main.py
news_reporter/src/news_reporter/config/: agents.yaml  tasks.yaml
news_reporter/src/news_reporter/tools/: custom_tool.py
