[tool.poetry]
name = "business_analyzer"
version = "0.1.0"
description = "business-analyzer using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
business_analyzer = "business_analyzer.main:run"
train = "business_analyzer.main:train"
replay = "business_analyzer.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
