[tool.poetry]
name = "column_assistant"
version = "0.1.0"
description = "column-assistant using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
column_assistant = "column_assistant.main:run"
train = "column_assistant.main:train"
replay = "column_assistant.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
