[tool.poetry]
name = "consulting_assistant"
version = "0.1.0"
description = "consulting-assistant using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
consulting_assistant = "consulting_assistant.main:run"
train = "consulting_assistant.main:train"
replay = "consulting_assistant.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
