[tool.poetry]
name = "news_reporter"
version = "0.1.0"
description = "news-reporter using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
news_reporter = "news_reporter.main:run"
train = "news_reporter.main:train"
replay = "news_reporter.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
